2001-10-26  Jukka-Pekka Iivonen  <jiivonen@hutcs.cs.hut.fi>

	* fn-functions (coupdays): Implemented the frequency 2 for basis 1
	(actual/actual).

2001-10-21  Jody Goldberg <jgoldberg@home.com>

	http://bugzilla.gnome.org/show_bug.cgi?id=62762
	* fn-math.c (gnumeric_log) : base > 0 && base != 1 are defined.

2001-10-18  Jody Goldberg <jgoldberg@home.com>

	* Release 0.72

2001-10-18  Jody Goldberg <jgoldberg@home.com>

	* fn-string.c (gnumeric_value) : number_match can match non-numbers too.
	* fn-information.c (gnumeric_n) : ditto.

2001-10-17  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* fn-database.c (find_cells_that_match) : Undefined cells should not satisfy
	  criteria.

2001-10-16  Jukka-Pekka Iivonen  <jiivonen@hutcs.cs.hut.fi>

	* fn-financial.c (coupdaybs): Fixed the frequency 1 for basis 0
	(US 30/360) and 4 (European 30/360).

2001-10-11  Jody Goldberg <jgoldberg@home.com>

	* fn-string.c (gnumeric_code) : unsigned char

2001-10-10  Jody Goldberg <jgoldberg@home.com>

	* fn-string.c (gnumeric_text) : Make the first arg a scalar to avoid
	  replication.
	(gnumeric_trim) : make arg a scalar so support numbers as args.
	(gnumeric_upper) : ditto.
	(gnumeric_substitute) : ditto.
	(gnumeric_search) : ditto.
	(gnumeric_right) : ditto.
	(gnumeric_rept) : ditto.
	(gnumeric_replace) : ditto.
	(gnumeric_mid) : ditto.
	(gnumeric_proper) : ditto.
	(gnumeric_lower) : ditto.
	(gnumeric_len) : ditto.
	(gnumeric_left) : ditto.
	(gnumeric_find) : ditto.
	(gnumeric_exact) : ditto.
	(gnumeric_code) : ditto.
	(gnumeric_clean) : ditto.

2001-10-09  Jukka-Pekka Iivonen  <jiivonen@hutcs.cs.hut.fi>

	* fn-financial.c (coupdays): Fixed frequency 1.

2001-10-07  Jody Goldberg <jgoldberg@home.com>

	* Release 0.71

2001-10-07  Jody Goldberg <jgoldberg@home.com>

	* fn-database.c (find_cells_that_match) : Be less stupid.
	(find_rows_that_match) : ditto.

2001-10-03  Jukka-Pekka Iivonen  <jiivonen@hutcs.cs.hut.fi>

	* fn-financial.c (coupnum): Fixed frequency 2 and 4.  Now it can