@@ -790,6 +790,8 @@ static char *help_accrint = {
 	   "ACCRINT calculates the accrued interest for a "
 	   "security that pays periodic interest.  The @rate is the annual "
 	   "rate of the security and @par is the par value of the security. "
+	   "@frequency is the number of coupon payments per year. "
+	   "Allowed frequencies are: 1 = annual, 2 = semi, 4 = quarterly. "
 	   "@basis is the type of day counting system you want to use:\n"
 	   "\n"
 	   "0  US 30/360\n"
@@ -844,8 +846,8 @@ static char *help_accrintm = {
 	   "ACCRINTM calculates and returns the accrued interest for a "
 	   "security from @issue to @maturity date.  @rate is the annual "
 	   "rate of the security and @par is the par value of the security. "
-	   "If you omit @par, ACCRINTM applies $1,000 instead.  @basis is "
-	   "the type of day counting system you want to use:\n"
+	   "If you omit @par, ACCRINTM applies $1,000 instead.  "
+	   "@basis is the type of day counting system you want to use:\n"
 	   "\n"
 	   "0  US 30/360\n"
 	   "1  actual days/actual days\n"
@@ -896,8 +898,8 @@ static char *help_intrate = {
 	   "vested security. "
 	   "@investment is the prize of the security paid at @settlement "
 	   "date and @redemption is the amount to be received at @maturity "
-	   "date.  @basis is the type of day counting system you want to "
-	   "use:\n"
+	   "date.  "
+	   "@basis is the type of day counting system you want to use:\n"
 	   "\n"
 	   "0  US 30/360\n"
 	   "1  actual days/actual days\n"
@@ -1007,8 +1009,8 @@ static char *help_pricedisc = {
 	   "of a security bond.  The security does not pay interest at "
 	   "maturity.  @discount is the rate for which the security "
 	   "is discounted.  @redemption is the amount to be received on "
-	   "@maturity date.  @basis is the type of day counting system you "
-	   "want to use:\n"
+	   "@maturity date.  "
+	   "@basis is the type of day counting system you want to use:\n"
 	   "\n"
 	   "0  US 30/360\n"
 	   "1  actual days/actual days\n"
@@ -2812,7 +2814,18 @@ static char *help_coupdaybs = {
 	   "@SYNTAX=COUPDAYBS(settlement,maturity,frequency[,basis])\n"
 	   "@DESCRIPTION="
 	   "Returns the number of days from the beginning of the coupon "
-	   "period to the settlement date."
+	   "period to the settlement date. "
+	   "@frequency is the number of coupon payments per year. "
+	   "Allowed frequencies are: 1 = annual, 2 = semi, 4 = quarterly. "
+	   "@basis is the type of day counting system you want to use:\n"
+	   "\n"
+	   "0  US 30/360\n"
+	   "1  actual days/actual days\n"
+	   "2  actual days/360\n"
+	   "3  actual days/365\n"
+	   "4  European 30/360\n"
+	   "\n"
+	   "If @basis is omitted, US 30/360 is applied. "
 	   "\n"
 	   "@EXAMPLES=\n"
 	   "\n"
@@ -2855,6 +2868,17 @@ static char *help_coupdays = {
 	   "@DESCRIPTION="
 	   "Returns the number of days in the coupon period of the "
 	   "settlement date."
+	   "@frequency is the number of coupon payments per year. "
+	   "Allowed frequencies are: 1 = annual, 2 = semi, 4 = quarterly. "
+	   "@basis is the type of day counting system you want to use:\n"
+	   "\n"
+	   "0  US 30/360\n"
+	   "1  actual days/actual days\n"
+	   "2  actual days/360\n"
+	   "3  actual days/365\n"
+	   "4  European 30/360\n"
+	   "\n"
+	   "If @basis is omitted, US 30/360 is applied. "
 	   "\n"
 	   "@EXAMPLES=\n"
 	   "\n"
@@ -2897,6 +2921,17 @@ static char *help_coupdaysnc = {
 	   "@DESCRIPTION="
 	   "Returns the number of days from the settlement date to the "
 	   "next coupon date."
+	   "@frequency is the number of coupon payments per year. "
+	   "Allowed frequencies are: 1 = annual, 2 = semi, 4 = quarterly. "
+	   "@basis is the type of day counting system you want to use:\n"
+	   "\n"
+	   "0  US 30/360\n"
+	   "1  actual days/actual days\n"
+	   "2  actual days/360\n"
+	   "3  actual days/365\n"
+	   "4  European 30/360\n"
+	   "\n"
+	   "If @basis is omitted, US 30/360 is applied. "
 	   "\n"
 	   "@EXAMPLES=\n"
 	   "\n"
@@ -2916,6 +2951,17 @@ static char *help_coupncd = {
 	   "@SYNTAX=COUPNCD(settlement,maturity,frequency[,basis])\n"
 	   "@DESCRIPTION="
 	   "Returns the coupon date following settlement."
+	   "@frequency is the number of coupon payments per year. "
+	   "Allowed frequencies are: 1 = annual, 2 = semi, 4 = quarterly. "
+	   "@basis is the type of day counting system you want to use:\n"
+	   "\n"
+	   "0  US 30/360\n"
+	   "1  actual days/actual days\n"
+	   "2  actual days/360\n"
+	   "3  actual days/365\n"
+	   "4  European 30/360\n"
+	   "\n"
+	   "If @basis is omitted, US 30/360 is applied. "
 	   "\n"
 	   "@EXAMPLES=\n"
 	   "\n"
@@ -2957,6 +3003,17 @@ static char *help_couppcd = {
 	   "@SYNTAX=COUPPCD(settlement,maturity,frequency[,basis])\n"
 	   "@DESCRIPTION="
 	   "Returns the coupon date preceeding settlement."
+	   "@frequency is the number of coupon payments per year. "
+	   "Allowed frequencies are: 1 = annual, 2 = semi, 4 = quarterly. "
+	   "@basis is the type of day counting system you want to use:\n"
+	   "\n"
+	   "0  US 30/360\n"
+	   "1  actual days/actual days\n"
+	   "2  actual days/360\n"
+	   "3  actual days/365\n"
+	   "4  European 30/360\n"
+	   "\n"
+	   "If @basis is omitted, US 30/360 is applied. "
 	   "\n"
 	   "@EXAMPLES=\n"
 	   "\n"
@@ -2976,6 +3033,17 @@ static char *help_coupnum = {
 	   "@SYNTAX=COUPNUM(settlement,maturity,frequency[,basis])\n"
 	   "@DESCRIPTION=Returns the numbers of coupons to be paid between "
 	   "the settlement and maturity dates, rounded up."
+	   "@frequency is the number of coupon payments per year. "
+	   "Allowed frequencies are: 1 = annual, 2 = semi, 4 = quarterly. "
+	   "@basis is the type of day counting system you want to use:\n"
+	   "\n"
+	   "0  US 30/360\n"
+	   "1  actual days/actual days\n"
+	   "2  actual days/360\n"
+	   "3  actual days/365\n"
+	   "4  European 30/360\n"
+	   "\n"
+	   "If @basis is omitted, US 30/360 is applied. "
 	   "\n"
 	   "@EXAMPLES=\n"
 	   "\n"
