@@ -29,7 +29,7 @@ Jody:
 
 Jukka:
 	* Improved MPS plugin.
-	* Extended the data analysis tools documentation.
+	* Extended the data analysis tools and function documentation.
 	* Improved COUPDAYS().
 
 Morten:
